--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@mui/material": "^6.4.3",
     "@mui/styled-engine": "^6.4.3",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "react-chartjs-2": "^5.3.0",
     "recharts": "^2.15.1"
   }
 }
