--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@mui/material": "^6.4.3",
     "@mui/styled-engine": "^6.4.3",
     "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.8",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.0.0",
     "react-icons": "^5.4.0",
