--- a/config.yml
+++ b/config.yml
@@ -3,14 +3,13 @@ version: "3.1"
 language: en
 
 pipeline:
-- name: WhitespaceTokenizer    # Tokenizer added before featurizers
+- name: WhitespaceTokenizer
 - name: SpacyNLP
-  model: "en_core_web_sm"    # Ensure you have the right spaCy model
+  model: "en_core_web_sm"
 - name: SpacyEntityExtractor
-- name: RegexEntityExtractor    # Optional, can be removed if not needed
-- name: RegexFeaturizer    # Featurizer
-- name: CountVectorsFeaturizer    # Featurizer
-- name: CountVectorsFeaturizer    # Featurizer with ngram features
+- name: RegexFeaturizer
+- name: CountVectorsFeaturizer
+- name: CountVectorsFeaturizer
   analyzer: char_wb
   min_ngram: 1
   max_ngram: 4
@@ -34,4 +33,7 @@ policies:
   nlu_threshold: 0.7
   core_fallback_threshold: 0.3
   deny_suggestion_intent_name: "out_of_scope"
-assistant_id: 20250303-170548-antique-coverage
+  session_config:
+    session_expiration_time: 60
+    carry_over_slots_to_new_session: true
+assistant_id: 20250304-005541-pink-iceberg
