Created SQLite DB

--- a/domain.yml
+++ b/domain.yml
@@ -65,6 +65,8 @@ entities:
 
 actions:
   - action_fallback_llm
+  - action_validate_user_input
+
 #  - action_listen
 #  - action_restart
 #  - action_session_start
