--- a/data/rules.yml
+++ b/data/rules.yml
@@ -22,3 +22,7 @@ rules:
   - intent: out_of_scope
   - action: utter_out_of_scope
 
+- rule: Handle unclear words
+  steps:
+  - intent: unclear_input
+  - action: action_validate_user_input
