--- a/fempredict/data/rules.yml
+++ b/fempredict/data/rules.yml
@@ -22,7 +22,7 @@ rules:
   - intent: out_of_scope
   - action: utter_out_of_scope
 
-- rule: Handle unclear words
+- rule: Handle typo correction
   steps:
-  - intent: unclear_input
-  - action: action_validate_user_input
+  - intent: user_query
+  - action: action_fallback_llm
